sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: not found: value estPlusPetit
    else if(!estPlusPetit(i,i+1)){i+=1}
             ^